[package]
name = "rocket_complement"
version = "0.1.0"
authors = ["swilson2 <swilson2@vitamix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rand = "0.7.2"
motivations = "1.1.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "serve"]
